# quickerDebug

./: .gitignore  LICENSE  readme.md  setup.cfg
simpleDebug/: sd.py  simpleDebug.py
simpleDebug.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/simpleDebug/: sd.py  simpleDebug.py
