[metadata]
name = simpleDebug
version = 0.0.1
author = Gautham Venkateshwaran
author_email = gauthamv6002@gmail.com
description = Instant debugger alternative for python
long_description = file: README.md
long_description_content_type = text/markdown
url = //
classifiers = 
    Programming Language :: Python :: 3
    Liscense :: MIT Liscense
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10.0
include_package_data = True
